--- a/MegaDeskWeb/MegaDeskWeb.csproj
+++ b/MegaDeskWeb/MegaDeskWeb.csproj
@@ -93,6 +93,7 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
+    <Content Include="Styles\main.css" />
     <Content Include="Web.config" />
   </ItemGroup>
   <ItemGroup>
