--- a/MegaDeskWeb/MegaDeskWeb.csproj
+++ b/MegaDeskWeb/MegaDeskWeb.csproj
@@ -86,6 +86,7 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
+    <Content Include="stylesheets\home.css" />
     <Content Include="Web.config" />
   </ItemGroup>
   <ItemGroup>
